--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-dash==2.0.0
-dash-bootstrap-components==1.0.0
+dash==2.4.1
+dash-bootstrap-components==1.1.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-Flask==1.1.2
-Flask-Caching==1.10.1
-numpy==1.20.2
-waitress==2.0.0
+Flask==2.1.2
+Flask-Caching==1.11.1
+numpy==1.22.4
+waitress==2.1.2
 openpyxl==3.0.9
 pandas==1.3
 requests==2
-statsmodels==0.13
+statsmodels==0.13.2
 matplotlib==3.4
+scipy==1.8.0
