--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Python: Current File",
-            "type": "python",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}"
-            }
-        }
+        
+    {
+        "type": "node",
+        "request": "attach",
+        "name": "Docker: Attach to Node",
+        "remoteRoot": "/usr/src/app"
+    }
     ]
 }
