--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ requests==2
 statsmodels==0.13.2
 matplotlib==3.4
 scipy==1.8.0
+
+#Pooja
+sqlalchemy-1.4.37
+Flask-SQLAlchemy-2.5.1
+psycopg2-2.9.3
+flask-login-0.6.1
