--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,11 @@ services:
       - DASH_DEBUG_MODE=False
       - HOST=0.0.0.0
     build: .
-    ports:
-      - "8050:8050"
+    # ports:
+    #   - "8050:8050"
+    container_name: adarelorg
+    networks:
+      - reverse_proxy_nw
     volumes:
       - .:/app
 
@@ -22,3 +25,8 @@ services:
       - "8050:8050"
     volumes:
       - .:/app
+
+networks:
+  reverse_proxy_nw:
+    name: reverse_proxy_nw
+    external: true
